--- a/Sticky Navbar CSS/css/style.css
+++ b/Sticky Navbar CSS/css/style.css
@@ -1,24 +1,31 @@
 :root{
 	--main-tt:uppercase;
-};
-
-body{
-	margin: 0;
-	padding: 0;
-	font-family: Poppins;
 }
 
-.navbar{
+html{
+	scroll-behavior: smooth;
+}
+body{
+	margin: 0;
+	padding:0;
+	font-family: Poppins;
+	width: 100%;
+	box-sizing: border-box;;
+}
+
+
+#navbar{
 	position: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-flex-direction: row;
-flex-wrap: wrap;
-background-color: #d4d7de;
-width: 100%;
-height: 70px;
-z-index: 1;
+	flex-direction: row;
+	flex-wrap: wrap;
+	background-color: #d4d7de;
+	
+	height: 70px;
+	top: 0;
+	z-index: 1;
 }
 
 .nav{
@@ -29,12 +36,12 @@ z-index: 1;
 }
 
 .logo{
-	 flex: 1 1 auto;
-	 margin-left: 10%;
-	 text-transform: var(--main-tt);
-	 letter-spacing: 1px;
-	 font-weight: bold;
-	 font-size: 35px;
+	flex: 1 1 auto;
+	margin-left: 10%;
+	text-transform: var(--main-tt);
+	letter-spacing: 1px;
+	font-weight: bold;
+	font-size: 35px;
 }
 
 a{
@@ -50,10 +57,42 @@ a:hover{
 
 .barner-area{
 	position: relative;
-	border-image: url(ay.jpg);
+	background-image: url("css/ay.jpg");
 	width: 100%;
 	height: 100vh;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
+
+.about-area, .port-area, .contact-area{
+	position: relative;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 100%;
+	height: 700px;
+}
+
+.text-part{
+	width: 65%;
+	height: 80%;
+}
+
+h1{
+	font-size: 50px;
+	font-family: Audiowide;
+}
+
+p{
+	font-size: 24px;
+	line-height: 50px;
+}
+
+.about-area, .contact-area{
+	background-color: #262626;
+	color: white;
+}
+
