--- a/Sticky Navbar CSS/css/style.css
+++ b/Sticky Navbar CSS/css/style.css
@@ -22,7 +22,6 @@ body{
 	flex-direction: row;
 	flex-wrap: wrap;
 	background-color: #d4d7de;
-	
 	height: 70px;
 	top: 0;
 	z-index: 1;
@@ -32,7 +31,7 @@ body{
 	display: flex;
 	justify-content: right;
 	list-style: none;
-	margin-right: 15%
+	margin-right: 10%
 }
 
 .logo{
@@ -57,7 +56,7 @@ a:hover{
 
 .barner-area{
 	position: relative;
-	background-image: url("css/ay.jpg");
+	background-image: url("ay.jpg");
 	width: 100%;
 	height: 100vh;
 	background-repeat: no-repeat;
@@ -77,8 +76,9 @@ a:hover{
 }
 
 .text-part{
-	width: 65%;
+	width: 80%;
 	height: 80%;
+	text-align: justify;
 }
 
 h1{
